crates/strider-analyze/tests/snapshots/mips64be__memory__main.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x120000cc8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x120000ca0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "10" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "10" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x9:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v14" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nt0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "10" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "16" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "10" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x120000c70:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "16" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v19" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v19" [color="#888888", style=dashed];
  "v19" -> "16" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v20" [color="#888888", style=dashed];
  "v20" -> "16" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nt0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v21" [color="#888888", style=dashed];
  "v21" -> "16" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "16" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x120000cf8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v26" [color="#888888", style=dashed];
  "v26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v27" [color="#888888", style=dashed];
  "v27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v28" [color="#888888", style=dashed];
  "v28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v29" [color="#888888", style=dashed];
  "v29" -> "22" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "30" -> "22" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "31" -> "22" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "32" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x120000d08:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "35" -> "32" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v36" [color="#888888", style=dashed];
  "v36" -> "32" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v37" [color="#888888", style=dashed];
  "v37" -> "32" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v38" [color="#888888", style=dashed];
  "v38" -> "32" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "39" -> "32" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "40" -> "32" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "41" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "32" -> "41" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x120000d18:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v43" [label="Post Call\na0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v43" [color="#888888", style=dashed];
  "v43" -> "41" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "41" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "46" -> "41" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nt0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v47" [color="#888888", style=dashed];
  "v47" -> "41" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "48" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "41" -> "48" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x120000d28:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "51" -> "48" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v52" [color="#888888", style=dashed];
  "v52" -> "48" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\na2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v53" [color="#888888", style=dashed];
  "v53" -> "48" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v54" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v54" [color="#888888", style=dashed];
  "v54" -> "48" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "v55" [label="Post Call\nt0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v55" [color="#888888", style=dashed];
  "v55" -> "48" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "56" -> "48" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "48" -> "57" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "48" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "57" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v59" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "48" -> "v59" [color="#888888", style=dashed];
  "v59" -> "57" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v60" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "48" -> "v60" [color="#888888", style=dashed];
  "v60" -> "57" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v61" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "48" -> "v61" [color="#888888", style=dashed];
  "v61" -> "57" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "58" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "v62" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "48" -> "v62" [color="#888888", style=dashed];
  "v62" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v63" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "48" -> "v63" [color="#888888", style=dashed];
  "v63" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "49" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "41" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "v47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v68" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v68" [color="#888888", style=dashed];
  "v68" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "69" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "69" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0xe40:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" -> "70" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "72" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x100000000000106b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="init\nt9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "v75" [label="Post Call\nt0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v75" [color="#888888", style=dashed];
  "v75" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v76" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v76" [color="#888888", style=dashed];
  "v76" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0xffffffffffffffd0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="StackStore u64\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "22" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0xffffffffffffffd8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "81" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "81" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "16" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v83" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v83" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "84" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "84" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0xffffffffffffffb0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "86" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "87" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "87" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "88" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0xe38:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "88" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "86" -> "88" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "72" -> "88" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "86" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "90" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v91" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v91" -> "86" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "92" -> "86" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "92" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "90" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[4] ← t0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← a3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "93" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0xffffffffffffffc0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u64\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "94" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v95" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v95" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "94" [label="StackStore u64\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "96" -> "94" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v97" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v97" -> "94" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "98" -> "94" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "98" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "86" -> "98" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "99" -> "98" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "99" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "88" -> "99" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "100" -> "99" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "100" [label="const 0xe30:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "96" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "86" -> "96" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v101" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v101" -> "96" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "102" -> "96" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "102" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
}
